--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               <td>
                 <heading>News</heading>
 		      
-		      
+                <p> <strong>[2017.12.01]</strong> We will present <strong><a href="https://arxiv.org/abs/1712.07557.pdf">Differentially Private Federated Learning</a></strong> at Workshop on Machine Learning on the Phone and other Consumer Devices at NIPS 2017!</p>
 		<p> <strong>[2017.09.19]</strong> Our <a href="https://arxiv.org/abs/1708.09644">paper</a> is awarded the <strong><a href="http://2017.ieeeicip.org/AwardFinalist.asp">Microsoft Best Student Paper</a></strong> in ICIP 2017.</p>
                 <p> <strong>[2017.05.15]</strong> I will join <strong><a href="https://icn.sap.com/home.html">SAP Machine Learning Research</a></strong> in Berlin, as a <strong>Senior Research Scientist</strong> in Deep Learning.</p>
 		<p> <strong>[2017.04.01]</strong> Two papers are accepted in <strong><a href="http://acl2017.org/">ACL 2017</a>.</strong> </p>
