--- a/index.html
+++ b/index.html
@@ -121,14 +121,17 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               <td>
                 <heading>News</heading>
 		      
-                <p> <strong>[2017.12.01]</strong> We will present <strong><a href="https://arxiv.org/abs/1712.07557.pdf">Differentially Private Federated Learning</a></strong> at Workshop on Machine Learning on the Phone and other Consumer Devices at NIPS 2017!</p>
-		<p> <strong>[2017.09.19]</strong> Our <a href="https://arxiv.org/abs/1708.09644">paper</a> is awarded the <strong><a href="http://2017.ieeeicip.org/AwardFinalist.asp">Microsoft Best Student Paper</a></strong> in ICIP 2017.</p>
-                <p> <strong>[2017.05.15]</strong> I will join <strong><a href="https://icn.sap.com/home.html">SAP Machine Learning Research</a></strong> in Berlin, as a <strong>Senior Research Scientist</strong> in Deep Learning.</p>
-		<p> <strong>[2017.04.01]</strong> Two papers are accepted in <strong><a href="http://acl2017.org/">ACL 2017</a>.</strong> </p>
-                <p> <strong>[2016.12.01]</strong> I will present <strong><a href="https://arxiv.org/pdf/1611.06764.pdf">Plug-and-Play Binary Quantization Layer</a></strong> at Workshop on Efficient Deep Learning at NIPS 2016!</p>
-		<p> <strong>[2016.11.11]</strong> The <strong><a href="https://github.com/hosseinm/med">Motion Emotion Dataset (MED)</a></strong> is online!</p>
-                <p> <strong>[2016.09.25]</strong> Our work is finalist for the <strong><a href="http://2016.ieeeicip.org/Awards.asp">Best Paper Award</a></strong> in ICIP 2016.</p>
+<p> <strong>[2018.02.01]</strong> A workshop is accepted at <strong><a href="http://eccv2018.org">ECCV 2018</a></strong> on Shortcomings in Vision and Language (SiVL).</p>
 
+<p> <strong>[2018.02.01]</strong> A paper is accepted to <strong>PAMI</strong> on <a href="http://eccv2018.org">Self-paced Deep Learning</a>.</p>
+
+<p> <strong>[2017.09.19]</strong> Our <a href="https://arxiv.org/abs/1708.09644">paper</a> is awarded the <strong><a href="http://2017.ieeeicip.org/AwardFinalist.asp">Microsoft Best Student Paper</a></strong> in ICIP 2017.</p>	
+
+<p> <strong>[2017.04.01]</strong> Two papers are accepted in <strong><a href="http://acl2017.org/">ACL 2017</a>.</strong> </p>
+                
+<p> <strong>[2016.11.11]</strong> The <strong><a href="https://github.com/hosseinm/med">Motion Emotion Dataset (MED)</a></strong> is online!</p>
+<!--
+ -->
               </td>
             </tr>
           </tbody></table>
