--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               <td>
                 <heading>News</heading>
 		      
-<p> <strong>[2018.02.01]</strong> A workshop is accepted at <strong><a href="http://eccv2018.org">ECCV 2018</a></strong> on Shortcomings in Vision and Language (SiVL).</p>
+<p> <strong>[2018.04.01]</strong> A workshop on <strong><a href="http://eccv2018.org">Shortcomings in Vision and Language (SiVL)</a></strong> is accepted at ECCV 2018.</p>
 
-<p> <strong>[2018.02.01]</strong> A paper is accepted to <strong>PAMI</strong> on <a href="http://eccv2018.org">Self-paced Deep Learning</a>.</p>
+<p> <strong>[2018.02.01]</strong> A paper on <a href="https://arxiv.org/abs/1605.07651.pdf">Self-paced Deep Learning</a> is accepted to PAMI 2018.</p>
 
 <p> <strong>[2017.09.19]</strong> Our <a href="https://arxiv.org/abs/1708.09644">paper</a> is awarded the <strong><a href="http://2017.ieeeicip.org/AwardFinalist.asp">Microsoft Best Student Paper</a></strong> in ICIP 2017.</p>	
 
