--- a/index.html
+++ b/index.html
@@ -178,7 +178,10 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 	                <p><a href="https://arxiv.org/abs/1610.00307">
 	<papertitle>Plug-and-Play CNN for Crowd  Analysis: An Application in Abnormal Event Detection</papertitle></a><br>
 			M. Ravanbakhsh, <strong>M. Nabi</strong>, Mousavi, E. Sangineto and N. Sebe<br>
-                  <em>arXiv:1610.00307</em>, 2016 &nbsp; <br>
+<!--
+		<em>arXiv:1610.00307</em>, 2016 &nbsp; <br>
+-->
+		<em>Transaction on PAMI</em>, 2018 &nbsp; <br>
                   <a href="https://arxiv.org/pdf/1610.00307v1.pdf">PDF</a> /
                   <a href="#">bibtex</a>
                 </p><p></p>
