--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 
 
 <!--Next paper should be listed in bottom -->
-	              <td width="15%"><img src="./img/SelfPaced.jpg" alt="PontTuset" width="200" style="border-style: none">
-	              </td><td width="75%" valign="top">
+	              <td width="25%"><img src="./img/SelfPaced.jpg" alt="PontTuset" width="200" style="border-style: none">
+	              </td><td width="50%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1605.07651">
 	<papertitle>Self-Paced Deep Learning for Weakly Supervised Object Detection</papertitle></a><br>E. Sangineto*, <strong>M. Nabi</strong>*, D. Culibrk and N. Sebe<br>
-                  <em>arXiv:1605.07651v2</em>, 2017 &nbsp; <br>
+                  <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</em>, 2018 &nbsp; <br>
                   <a href="https://arxiv.org/pdf/1605.07651.pdf">PDF</a> /
 		  <a href="https://github.com/moinnabi/SelfPacedDeepLearning">code</a> /
                   <a href="http://dblp.uni-trier.de/rec/bib2/journals/corr/SanginetoNCS16.bib">bibtex</a>
@@ -181,7 +181,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 <!--
 		<em>arXiv:1610.00307</em>, 2016 &nbsp; <br>
 -->
-		<em>Transaction on PAMI</em>, 2018 &nbsp; <br>
+		<em>IEEE Winter Conference on Applications of Computer Vision (WACV)</em>, 2018 &nbsp; <br>
                   <a href="https://arxiv.org/pdf/1610.00307v1.pdf">PDF</a> /
                   <a href="#">bibtex</a>
                 </p><p></p>
