--- a/index.html
+++ b/index.html
@@ -152,17 +152,16 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 
 
 <!--Next paper should be listed in bottom -->
-	              <td width="20%"><img src="./img/SelfPaced.jpg" alt="PontTuset" width="175" style="border-style: none">
+	              <td width="20%"><img src="./img/SelfPaced.jpg" alt="PontTuset" width="150" style="border-style: none">
 	              </td><td width="80%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1605.07651">
 	<papertitle>Self-Paced Deep Learning for Weakly Supervised Object Detection</papertitle></a><br>E. Sangineto*, <strong>M. Nabi</strong>*, D. Culibrk and N. Sebe<br>
                   <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</em>, 2018 &nbsp; <br>
-		<small>*Authors contributed equally</small>
-
 		</br>
                   <a href="https://arxiv.org/pdf/1605.07651.pdf">PDF</a> /
 		  <a href="https://github.com/moinnabi/SelfPacedDeepLearning">code</a> /
                   <a href="http://dblp.uni-trier.de/rec/bib2/journals/corr/SanginetoNCS16.bib">bibtex</a>
+	   		<small>(*Authors contributed equally)</small>
                 </p><p></p>
 <!--
 			   <p>In this paper we propose a self-paced learning protocol for weakly-supervised object detection. The main idea is to iteratively select a subset of samples that are most likely correct, which are used for training. We show results on Pascal VOC and ImageNet, outperforming the previous state of the art on both datasets.
