--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/Tposelet.jpg" alt="PontTuset" width="210" style="border-style: none">
+	              <td width="25%"><img src="./img/Tposelet.jpg" alt="PontTuset" width="160" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="http://dl.acm.org/citation.cfm?id=2586288">
 	<papertitle>Temporal Poselets for Collective Activity Detection and Recognition</papertitle></a><br><strong>M. Nabi</strong>, A. Del Bue, V. Murino<br>
@@ -356,14 +356,16 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                   <a href="./files/ICCVW2013_code.tar.gz">code</a> /
                   <a href="./files/ICCVW2013.bib">bibtex</a>
                 </p><p></p>
-                <p>We present a mid-level motion representation based on actication patterns of Poselets detectors over time (Temporal Poselet), for detecting/recognizing the activity of a group of people in crowd environments.
+<!--
+<p>We present a mid-level motion representation based on actication patterns of Poselets detectors over time (Temporal Poselet), for detecting/recognizing the activity of a group of people in crowd environments.
+-->
 		</p><p></p>
                 <p></p>
               </td>
             </tr>
 
 
-<!--Next paper should be listed in bottom -->
+<!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/BagOfPoselet.jpg" alt="PontTuset" width="200" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="#">
@@ -379,7 +381,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 <p></p>
               </td>
             </tr>
-
+-->
 
 <!--SECTION -->
 
@@ -405,8 +407,10 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                   <a href="./files/thesis_slide.pdf">slides</a> /
                   <a href="https://www.youtube.com/watch?v=6IY-0swKaiM">talk</a> /
                 </p><p></p>
+		    <!--
                 <p>This thesis targets employing mid-level representations for different high-level visual
 recognition tasks, both in image and video understanding.
+		     -->
                 </p><p></p>
                 <p></p>
               </td>
