--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/Emotion.jpg" alt="PontTuset" width="150" style="border-style: none">
+	              <td width="25%"><img src="./img/Emotion.jpg" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1607.07646">
 	<papertitle>Emotion-Based Crowd Representation for Abnormality Detection</papertitle></a><br>
@@ -213,10 +213,10 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             </tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/BrainDecode.jpg" alt="PontTuset" width="150" style="border-style: none">
+	              <td width="25%"><img src="./img/BrainDecode.jpg" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="#">
-	<papertitle>Sparse-coded Cross-domain Adaptation from the Visual to the Brain Domain</papertitle></a><br>
+	<papertitle>Sparse-coded Cross-domain Adaptation from Visual to Brain Domain</papertitle></a><br>
 			P. Ghaemmaghami, <strong>M. Nabi</strong>, Y. Yan and N. Sebe<br>
                   <em>IEEE International Conference on Pattern Recognition (ICPR)</em>, 2016 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
                   <a href="./files/ICPR2016_paper.pdf">PDF</a> /
@@ -334,26 +334,6 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               </td>
             </tr>
 
-<!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/WeblyPatch_2.jpg" alt="PontTuset" width="130" style="border-style: none">
-	              </td><td width="75%" valign="top">
-	                <p><a href="#">
-	<papertitle>Webly-supervised Subcategoty-aware Discriminative Patch</papertitle></a><br><strong>M. Nabi</strong>, S. Divvala, A. Farhadi<br>
-                  <em>Technical Report</em>*, 2014 &nbsp; <br>
-                  <a href="./files/UW2014_TR.pdf">PDF</a> /
-                  <a href="./files/UW2014_slides.pdf">slide</a> /
-                  <a href="#">code</a>
-                </p><p></p>
-			      <!--
-<p>We study discovering a set of discriminative patches in subcategories of an object category, then train them in a webly-supervised fashion.
- 
-<small>*This work was done while I was at UW.</small>
--->
-                </p><p></p>
-                <p></p>
-              </td>
-            </tr>
-
 
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/Tposelet.jpg" alt="PontTuset" width="140" style="border-style: none">
@@ -426,6 +406,27 @@ recognition tasks, both in image and video understanding.
                 <p></p>
               </td>
             </tr>
+
+<!--Next paper should be listed in bottom -->
+	              <td width="25%"><img src="./img/WeblyPatch_2.jpg" alt="PontTuset" width="130" style="border-style: none">
+	              </td><td width="75%" valign="top">
+	                <p><a href="#">
+	<papertitle>Webly-supervised Subcategoty-aware Discriminative Patch</papertitle></a><br><strong>M. Nabi</strong>, S. Divvala, A. Farhadi<br>
+                  <em>Technical Report</em>*, 2014 &nbsp; <br>
+                  <a href="./files/UW2014_TR.pdf">PDF</a> /
+                  <a href="./files/UW2014_slides.pdf">slide</a> /
+                  <a href="#">code</a>
+                </p><p></p>
+			      <!--
+<p>We study discovering a set of discriminative patches in subcategories of an object category, then train them in a webly-supervised fashion.
+</br>			      
+<small>*This work was done while I was at UW.</small>
+ -->
+                </p><p></p>
+                <p></p>
+              </td>
+            </tr>
+
 
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/stock.jpg" alt="PontTuset" width="160" style="border-style: none">
