--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               <td>
                 <heading>News</heading>
 		      
-<p> <strong>[2018.04.01]</strong> A workshop on <a href="http://eccv2018.org">Shortcomings in Vision and Language</a> is accepted at ECCV 2018.</p>
+<p> <strong>[2018.04.01]</strong> A workshop on <a href="https://sites.google.com/view/sivl/">Shortcomings in Vision and Language</a> is accepted at ECCV 2018.</p>
 
 <p> <strong>[2018.02.01]</strong> A paper on <a href="https://arxiv.org/abs/1605.07651.pdf">Self-paced Deep Learning</a> is accepted to PAMI 2018.</p>
 
