--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/foil.png" alt="PontTuset" width="120" style="border-style: none">
+	              <td width="25%"><img src="./img/foil.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://foilunitn.github.io/">
 	<papertitle>FOIL it! Find One mismatch between Image and Language caption</papertitle></a><br>
 			R. Shekhar, S. Pezzelle, A. Herbelot, <strong>M. Nabi</strong>, E. Sangineto, R. Bernardi<br>
-                  <em>ACL</em>, 2017 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
+                  <em>Annual Meeting of the Association for Computational Linguistics (ACL)</em>, 2017 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
 		<a href="http://aclweb.org/anthology/P17-1024">PDF</a> /
 		<a href="https://foilunitn.github.io/content/aclPresentation-RaviShekhar.pdf">talk</a> /
 		  <a href="https://foilunitn.github.io/">code</a> /
