--- a/index.html
+++ b/index.html
@@ -194,10 +194,28 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 	                <p><a href="https://foilunitn.github.io/">
 	<papertitle>FOIL it! Find One mismatch between Image and Language caption</papertitle></a><br>
 			R. Shekhar, S. Pezzelle, A. Herbelot, <strong>M. Nabi</strong>, E. Sangineto, R. Bernardi<br>
-                  <em>Annual Meeting of the Association for Computational Linguistics (ACL)</em>, 2017 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
+                  <em>Association for Computational Linguistics (ACL)</em>, 2017 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
 		<a href="http://aclweb.org/anthology/P17-1024">PDF</a> /
 		<a href="https://foilunitn.github.io/content/aclPresentation-RaviShekhar.pdf">talk</a> /
-		  <a href="https://foilunitn.github.io/">code</a> /
+		  <a href="https://foilunitn.github.io/">code</a>
+                </p><p></p>
+<!--
+			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
+-->
+		</p><p></p>
+                <p></p>
+              </td>
+            </tr>
+
+<!--Next paper should be listed in bottom -->
+	              <td width="25%"><img src="./img/selfCS.png" alt="PontTuset" width="130" style="border-style: none">
+	              </td><td width="75%" valign="top">
+	                <p><a href="http://aclweb.org/anthology/P17-2082">
+	<papertitle>Self-Crowdsourcing Training for Relation Extraction</papertitle></a><br>
+			A. abad, <strong>M. Nabi</strong>, A. Moschitti<br>
+                  <em>Association for Computational Linguistics (ACL)</em>, 2017 &nbsp; <br>
+		<a href="http://aclweb.org/anthology/P17-2082">PDF</a> /
+		  <a href="http://aclweb.org/anthology/P17-2082">bibtex</a>
                 </p><p></p>
 <!--
 			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
