--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             </tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/selfCS.png" alt="PontTuset" width="130" style="border-style: none">
+	              <td width="25%"><img src="./img/selfcs.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="http://aclweb.org/anthology/P17-2082">
 	<papertitle>Self-Crowdsourcing Training for Relation Extraction</papertitle></a><br>
-			A. abad, <strong>M. Nabi</strong>, A. Moschitti<br>
+			A. Abad, <strong>M. Nabi</strong>, A. Moschitti<br>
                   <em>Association for Computational Linguistics (ACL)</em>, 2017 &nbsp; <br>
 		<a href="http://aclweb.org/anthology/P17-2082">PDF</a> /
 		  <a href="http://aclweb.org/anthology/P17-2082">bibtex</a>
