--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             </tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/selfcs.png" alt="PontTuset" width="130" style="border-style: none">
+	              <td width="25%"><img src="./img/selfCS.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="http://aclweb.org/anthology/P17-2082">
 	<papertitle>Self-Crowdsourcing Training for Relation Extraction</papertitle></a><br>
