--- a/index.html
+++ b/index.html
@@ -225,6 +225,25 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               </td>
             </tr>
 
+
+<!--Next paper should be listed in bottom -->
+	              <td width="25%"><img src="./img/sigir.png" alt="PontTuset" width="130" style="border-style: none">
+	              </td><td width="75%" valign="top">
+	                <p><a href="https://dl.acm.org/citation.cfm?id=3080666">
+	<papertitle>Autonomous Crowdsourcing through Human-Machine Collaborative Learning</papertitle></a><br>
+			A. Abad, <strong>M. Nabi</strong>, A. Moschitti<br>
+                  <em>Special Interest Group on Information Retrieval (SIGIR)</em>, 2017 &nbsp; <br>
+		<a href="https://dl.acm.org/citation.cfm?id=3080666">PDF</a> /
+		  <a href="https://dl.acm.org/citation.cfm?id=3080666">bibtex</a>
+                </p><p></p>
+<!--
+			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
+-->
+		</p><p></p>
+                <p></p>
+              </td>
+            </tr>
+
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/Emotion.jpg" alt="PontTuset" width="120" style="border-style: none">
 	              </td><td width="75%" valign="top">
