--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/selfCS.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
-	                <p><a href="http://aclweb.org/anthology/P17-2082">
+	                <p><a href="#">
 	<papertitle>Self-Crowdsourcing Training for Relation Extraction</papertitle></a><br>
 			A. Abad, <strong>M. Nabi</strong>, A. Moschitti<br>
                   <em>Association for Computational Linguistics (ACL)</em>, 2017 &nbsp; <br>
 		<a href="http://aclweb.org/anthology/P17-2082">PDF</a> /
-		  <a href="http://aclweb.org/anthology/P17-2082">bibtex</a>
+		  <a href="#">bibtex</a>
                 </p><p></p>
 <!--
 			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
@@ -229,17 +229,57 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/sigir.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
-	                <p><a href="https://dl.acm.org/citation.cfm?id=3080666">
+	                <p><a href="#">
 	<papertitle>Autonomous Crowdsourcing through Human-Machine Collaborative Learning</papertitle></a><br>
 			A. Abad, <strong>M. Nabi</strong>, A. Moschitti<br>
                   <em>Special Interest Group on Information Retrieval (SIGIR)</em>, 2017 &nbsp; <br>
 		<a href="https://dl.acm.org/citation.cfm?id=3080666">PDF</a> /
-		  <a href="https://dl.acm.org/citation.cfm?id=3080666">bibtex</a>
+		  <a href="#">bibtex</a>
                 </p><p></p>
 <!--
 			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
 -->
 		</p><p></p>
+                <p></p>
+              </td>
+            </tr>
+
+
+<!--Next paper should be listed in bottom -->
+	              <td width="25%"><img src="./img/adapt.jpg" alt="PontTuset" width="130" style="border-style: none">
+	              </td><td width="75%" valign="top">
+	                <p><a href="#">
+	<papertitle>A cross-modal adaptation approach for brain decoding</papertitle></a><br>
+			P. Ghaemmaghami, <strong>M. Nabi</strong>, Y. Yan, G. Riccardi, and N. Sebe<br>
+                  <em>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</em>, 2017 &nbsp; <br>
+                  <a href="https://ieeexplore.ieee.org/abstract/document/7952300/">PDF</a> /
+                  <a href="#">bibtex</a>
+                </p><p></p>
+<!--
+			      <p>In this paper, an adaptation paradigm is employed in order to transfer knowledge from visual domain to brain domain. We experimentally show that such adaptation procedure leads to improved results for the object recognition task in the brain domain, outperforming significantly the results achieved by the brain features alone.
+-->
+			      </p><p></p>
+                <p></p>
+              </td>
+            </tr>
+
+
+
+<!--Next paper should be listed in bottom -->
+	              <td width="25%"><img src="./img/BrainDecode.jpg" alt="PontTuset" width="130" style="border-style: none">
+	              </td><td width="75%" valign="top">
+	                <p><a href="#">
+	<papertitle>Sparse-coded Cross-domain Adaptation from Visual to Brain Domain</papertitle></a><br>
+			P. Ghaemmaghami, <strong>M. Nabi</strong>, Y. Yan and N. Sebe<br>
+                  <em>IEEE International Conference on Pattern Recognition (ICPR)</em>, 2016 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
+                  <a href="./files/ICPR2016_paper.pdf">PDF</a> /
+                  <a href="#">slies</a> /
+                  <a href="./files/ICPR2016.bib">bibtex</a>
+                </p><p></p>
+<!--
+			      <p>In this paper, an adaptation paradigm is employed in order to transfer knowledge from visual domain to brain domain. We experimentally show that such adaptation procedure leads to improved results for the object recognition task in the brain domain, outperforming significantly the results achieved by the brain features alone.
+-->
+			      </p><p></p>
                 <p></p>
               </td>
             </tr>
@@ -263,24 +303,6 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               </td>
             </tr>
 
-<!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/BrainDecode.jpg" alt="PontTuset" width="130" style="border-style: none">
-	              </td><td width="75%" valign="top">
-	                <p><a href="#">
-	<papertitle>Sparse-coded Cross-domain Adaptation from Visual to Brain Domain</papertitle></a><br>
-			P. Ghaemmaghami, <strong>M. Nabi</strong>, Y. Yan and N. Sebe<br>
-                  <em>IEEE International Conference on Pattern Recognition (ICPR)</em>, 2016 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
-                  <a href="./files/ICPR2016_paper.pdf">PDF</a> /
-                  <a href="#">slies</a> /
-                  <a href="./files/ICPR2016.bib">bibtex</a>
-                </p><p></p>
-<!--
-			      <p>In this paper, an adaptation paradigm is employed in order to transfer knowledge from visual domain to brain domain. We experimentally show that such adaptation procedure leads to improved results for the object recognition task in the brain domain, outperforming significantly the results achieved by the brain features alone.
--->
-			      </p><p></p>
-                <p></p>
-              </td>
-            </tr>
 
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/FineGrained.jpg" alt="PontTuset" width="130" style="border-style: none">
