--- a/index.html
+++ b/index.html
@@ -227,6 +227,26 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 
 
 <!--Next paper should be listed in bottom -->
+	              <td width="20%"><img src="./img/icip17.jpg" alt="PontTuset" width="140" style="border-style: none">
+	              </td><td width="80%" valign="top">
+	                <p><a href="https://ieeexplore.ieee.org/document/8296547/">
+	<papertitle>Abnormal Event Detection in Videos using Generative Adversarial Nets</papertitle></a><br>
+			M. Ravanbakhsh, <strong>M. Nabi</strong>, E. Sangineto L. Mercenaro, C. Regazzoni, N. Sebe<br>
+                  <em>IEEE International Conference on Image Processing (ICIP)</em>, 2017 &nbsp; <br>
+		<font color="red"><strong>Microsoft Best Student Paper Award</strong></font><br>
+
+                  <a href="https://arxiv.org/pdf/1708.09644.pdf">PDF</a> /
+                  <a href="#">bibtex</a>
+                </p><p></p>
+<!--
+			      <p>We present a novel measure-based method which allows measuring the local abnormality in a video by combining semantic information (inherited from existing CNN models) with low-level Optical Flow. The proposed method is validated on challenging abnormality detection datasets and the showed the superiority of our method compared to the state-of-the-arts.
+-->
+		</p><p></p>
+                <p></p>
+              </td>
+            </tr>
+
+<!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/sigir.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="#">
@@ -249,7 +269,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 	              <td width="25%"><img src="./img/adapt.jpg" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="#">
-	<papertitle>A cross-modal adaptation approach for brain decoding</papertitle></a><br>
+	<papertitle>A Cross-modal Adaptation Approach for Brain Decoding</papertitle></a><br>
 			P. Ghaemmaghami, <strong>M. Nabi</strong>, Y. Yan, G. Riccardi, and N. Sebe<br>
                   <em>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</em>, 2017 &nbsp; <br>
                   <a href="https://ieeexplore.ieee.org/abstract/document/7952300/">PDF</a> /
