--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 
 
 <!--Next paper should be listed in bottom -->
-	              <td width="20%"><img src="./img/icip17.jpg" alt="PontTuset" width="140" style="border-style: none">
+	              <td width="20%"><img src="./img/icip17.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="80%" valign="top">
 	                <p><a href="https://ieeexplore.ieee.org/document/8296547/">
 	<papertitle>Abnormal Event Detection in Videos using Generative Adversarial Nets</papertitle></a><br>
