--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/adapt.jpg" alt="PontTuset" width="130" style="border-style: none">
+	              <td width="25%"><img src="./img/adapt.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="#">
 	<papertitle>A Cross-modal Adaptation Approach for Brain Decoding</papertitle></a><br>
