--- a/index.html
+++ b/index.html
@@ -266,12 +266,12 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/adapt.png" alt="PontTuset" width="130" style="border-style: none">
+	              <td width="25%"><img src="./img/adapt.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="#">
 	<papertitle>A Cross-modal Adaptation Approach for Brain Decoding</papertitle></a><br>
 			P. Ghaemmaghami, <strong>M. Nabi</strong>, Y. Yan, G. Riccardi, and N. Sebe<br>
-                  <em>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</em>, 2017 &nbsp; <br>
+                  <em>International Conference on Acoustics, Speech, Signal Processing (ICASSP)</em>, 2017 &nbsp; <br>
                   <a href="https://ieeexplore.ieee.org/abstract/document/7952300/">PDF</a> /
                   <a href="#">bibtex</a>
                 </p><p></p>
