--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 	                <p><a href="#">
 	<papertitle>A Cross-modal Adaptation Approach for Brain Decoding</papertitle></a><br>
 			P. Ghaemmaghami, <strong>M. Nabi</strong>, Y. Yan, G. Riccardi, and N. Sebe<br>
-                  <em>International Conference on Acoustics, Speech, Signal Processing (ICASSP)</em>, 2017 &nbsp; <br>
+                  <em>International Conference on Acoustics, Speech, Signal Processing (ICASSP)</em>, 2017 <br>
                   <a href="https://ieeexplore.ieee.org/abstract/document/7952300/">PDF</a> /
                   <a href="#">bibtex</a>
                 </p><p></p>
