--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 
 
 <!--Next paper should be listed in bottom -->
-	              <td width="20%"><img src="./img/pami.png" alt="PontTuset" width="150" style="border-style: none">
+	              <td width="20%"><img src="./img/pami_new.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="80%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1605.07651">
 	<papertitle>Self-Paced Deep Learning for Weakly Supervised Object Detection</papertitle></a><br><strong>M. Nabi</strong>*, E. Sangineto*, D. Culibrk and N. Sebe<br>
@@ -208,7 +208,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             </tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/selfCS.png" alt="PontTuset" width="130" style="border-style: none">
+	              <td width="25%"><img src="./img/selfCS.png" alt="PontTuset" width="125" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="#">
 	<papertitle>Self-Crowdsourcing Training for Relation Extraction</papertitle></a><br>
