--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             <tbody><tr>
               <td>
                 <heading>News</heading>
+
+<p> <strong>[2018.11.06]</strong> Three papers are accepted in <a href="http://wacv19.wacv.net/">WACV 2019</a>.</p>
 		      
 <p> <strong>[2018.04.01]</strong> A workshop on <a href="https://sites.google.com/view/sivl/">Shortcomings in Vision and Language</a> is accepted at ECCV 2018.</p>
 
