--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             <tbody><tr>
               <td>
                 <heading>News</heading>
-<p> <strong>[2019.02.25]</strong> A paper on Continual Learning is accepted at <a href="http://cvpr2019.thecvf.com/">CVPR 2019</a>, Congratulations to Oleksiy! </p>		      
+<p> <strong>[2019.02.25]</strong> A <a href="https://arxiv.org/pdf/1904.03137.pdf">paper on Continual Learning</a> is accepted at <a href="http://cvpr2019.thecvf.com/">CVPR 2019</a>, Congratulations to Oleksiy! </p>		      
 
 <p> <strong>[2019.12.01]</strong> Second workshop on <a href="https://sites.google.com/view/sivl2019/">Shortcomings in Vision and Language</a> is accepted at NAACL 2019.</p>
 		      
