--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               <td>
                 <heading>News</heading>
 
-<p> <strong>[2019.05.14]</strong> A paper on commonsense reasoning is accepted at <a href="http://www.acl2019.org">ACL 2019</a>. </p>
+<p> <strong>[2019.05.14]</strong> A <a href="https://arxiv.org/pdf/1905.13497.pdf">paper</a> on commonsense reasoning is accepted at <a href="http://www.acl2019.org">ACL 2019</a>. </p>
 
 <p> <strong>[2019.02.25]</strong> A <a href="https://arxiv.org/pdf/1904.03137.pdf">paper</a> on Continual Learning is accepted at <a href="http://cvpr2019.thecvf.com/">CVPR 2019</a>, Congratulations to Oleksiy! </p>		      
 
