--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             <tbody><tr>
               <td>
                 <heading>News</heading>
-<p> <strong>[2020.04.05]</strong> A paper on Contrastive Self-Supervised Learning for Commonsense Reasoning is accepted at <a href="http://www.acl2020.org">ACL 2020</a>. </p>		      
+<p> <strong>[2020.04.05]</strong> A <a href="https://arxiv.org/pdf/2005.00669.pdf">paper</a> on Contrastive Self-Supervised Learning for Commonsense Reasoning is accepted at <a href="http://www.acl2020.org">ACL 2020</a>. </p>		      
 		      
 <p> <strong>[2019.09.02]</strong> I am looking for a highly motivated PhD student to work on <a href="https://iid.unitn.it/education/admission/reserved-topic-scholarships">continual learning</a>.</p>		      
 		      
