--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               </td>
             </tr>
 
-<!--Next paper should be listed in bottom -->
+<!--Next paper should be listed in bottom 
 	              <td width="20%"><img src="./img/CNNPlugPlay.jpg" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="80%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1610.00307">
@@ -198,9 +198,9 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 <p></p>
               </td>
             </tr>
+-->
 
-
-<!--Next paper should be listed in bottom -->
+<!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/foil.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://foilunitn.github.io/">
@@ -218,7 +218,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 <p></p>
               </td>
             </tr>
-
+-->
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/selfCS.png" alt="PontTuset" width="125" style="border-style: none">
 	              </td><td width="75%" valign="top">
@@ -258,7 +258,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               </td>
             </tr>
 
-<!--Next paper should be listed in bottom -->
+<!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/sigir.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="#">
@@ -275,9 +275,9 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 <p></p>
               </td>
             </tr>
+-->
 
-
-<!--Next paper should be listed in bottom -->
+<!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/adapt.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="#">
@@ -295,9 +295,9 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               </td>
             </tr>
 
+-->
 
-
-<!--Next paper should be listed in bottom -->
+<!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/BrainDecode.jpg" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="#">
@@ -315,8 +315,9 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 <p></p>
               </td>
             </tr>
+-->
 
-<!--Next paper should be listed in bottom -->
+<!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/Emotion.jpg" alt="PontTuset" width="120" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1607.07646">
@@ -334,9 +335,9 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 <p></p>
               </td>
             </tr>
+-->
 
-
-<!--Next paper should be listed in bottom -->
+<!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/FineGrained.jpg" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="http://ieeexplore.ieee.org/document/7738074/">
@@ -355,7 +356,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 <p></p>
               </td>
             </tr>
-
+-->
 
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/CNNaware.jpg" alt="PontTuset" width="140" style="border-style: none">
@@ -398,7 +399,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               </td>
             </tr>
 
-<!--Next paper should be listed in bottom -->
+<!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/CM.jpg" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="http://ieeexplore.ieee.org/document/7351223/">
@@ -419,8 +420,9 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 <p></p>
               </td>
             </tr>
+-->
 
-<!--Next paper should be listed in bottom -->
+<!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/iHOT.jpg" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="http://link.springer.com/chapter/10.1007%2F978-3-319-23234-8_66#page-1">
@@ -438,9 +440,9 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 <p></p>
               </td>
             </tr>
+-->
 
-
-<!--Next paper should be listed in bottom -->
+<!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/Tposelet.jpg" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="http://dl.acm.org/citation.cfm?id=2586288">
@@ -460,7 +462,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               </td>
             </tr>
 
-
+-->
 <!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/BagOfPoselet.jpg" alt="PontTuset" width="200" style="border-style: none">
 	              </td><td width="75%" valign="top">
