--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tbody><tr>
               <td>
-                <heading>Publications and Preprints</heading>
+                <heading>Selected Publications</heading>
               </td>
             </tr>
           </tbody></table>
