--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="7">
 		<tbody>
 		   <tr>
-
+			   
 
 <!--Next paper should be listed in bottom -->
 	              <td width="20%"><img src="./img/pami_new.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="80%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1605.07651">
-	<papertitle>Self-Paced Deep Learning for Weakly Supervised Object Detection</papertitle></a><br><strong>M. Nabi</strong>*, E. Sangineto*, D. Culibrk and N. Sebe<br>
+	<papertitle>Self-Paced Deep Learning for Weakly Supervised Object Detection</papertitle></a><br>E. Sangineto*, <strong>M. Nabi</strong>*, D. Culibrk and N. Sebe<br>
                   <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</em>, 2018 &nbsp; <br>
                   <a href="https://arxiv.org/pdf/1605.07651.pdf">PDF</a> /
 		  <a href="https://github.com/moinnabi/SelfPacedDeepLearning">code</a> /
@@ -179,6 +179,24 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 <p></p>
               </td>
             </tr>
+
+<!--Next paper should be listed in bottom -->
+	              <td width="20%"><img src="./img/dpfl.png" alt="PontTuset" width="140" style="border-style: none">
+	              </td><td width="80%" valign="top">
+	                <p><a href="https://arxiv.org/abs/1712.07557">
+	<papertitle>Differentially Private Federated Learning: A Client Level Perspective</papertitle></a><br>R. Gayer, T. Klein, <strong>M. Nabi</strong><br>
+                  <em>Workshop on Machine Learning on the Phone and Consumer Devices at NIPS</em>, 2017 &nbsp; <br>
+                  <a href="https://arxiv.org/pdf/1712.07557.pdf">PDF</a> /
+		  <a href="https://paperswithcode.com/paper/differentially-private-federated-learning-a">code</a> /
+                </p><p></p>
+<!--
+			   <p>In this paper we propose a self-paced learning protocol for weakly-supervised object detection. The main idea is to iteratively select a subset of samples that are most likely correct, which are used for training. We show results on Pascal VOC and ImageNet, outperforming the previous state of the art on both datasets.
+-->
+		</p><p></p>
+                <p></p>
+              </td>
+            </tr>
+			   
 
 <!--Next paper should be listed in bottom 
 	              <td width="20%"><img src="./img/CNNPlugPlay.jpg" alt="PontTuset" width="140" style="border-style: none">
