--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             </tr>
 -->
 
-<!--Next paper should be listed in bottom 
+<!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/foil.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://foilunitn.github.io/">
@@ -229,14 +229,14 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 		<a href="https://foilunitn.github.io/content/aclPresentation-RaviShekhar.pdf">talk</a> /
 		  <a href="https://foilunitn.github.io/">code</a>
                 </p><p></p>
-
+<!--
 			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
-
+-->
 		</p><p></p>
                 <p></p>
               </td>
             </tr>
--->
+
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/selfCS.png" alt="PontTuset" width="125" style="border-style: none">
 	              </td><td width="75%" valign="top">
@@ -276,7 +276,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
               </td>
             </tr>
 
-<!--Next paper should be listed in bottom 
+<!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/sigir.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="#">
@@ -286,14 +286,14 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 		<a href="https://dl.acm.org/citation.cfm?id=3080666">PDF</a> /
 		  <a href="#">bibtex</a>
                 </p><p></p>
-
+<!--
 			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
-
+-->
 		</p><p></p>
                 <p></p>
               </td>
             </tr>
--->
+
 
 <!--Next paper should be listed in bottom 
 	              <td width="25%"><img src="./img/adapt.png" alt="PontTuset" width="140" style="border-style: none">
