--- a/index.html
+++ b/index.html
@@ -162,6 +162,41 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 		<tbody>
 		   <tr>
 			   
+<!--Next paper should be listed in bottom -->
+	              <td width="20%"><img src="./img/iccv.png" alt="PontTuset" width="140" style="border-style: none">
+	              </td><td width="80%" valign="top">
+	                <p><a href="https://arxiv.org/abs/1905.06242">
+	<papertitle>Budget-Aware Adapters for Multi-Domain Learning</papertitle></a><br>Rodrigo Berriel, Stephane Lathuili, <strong>M. Nabi</strong>Tassilo Klein, Thiago Oliveira-Santos, Nicu Sebe, Elisa Ricci<br>
+                  <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019 &nbsp; <br>
+                  <a href="https://arxiv.org/pdf/1905.06242.pdf">PDF</a> /
+		  <a href="https://github.com/rodrigoberriel/budget-aware-adapters">code</a>
+                </p><p></p>
+<!--
+			   <p>In this paper we propose a self-paced learning protocol for weakly-supervised object detection. The main idea is to iteratively select a subset of samples that are most likely correct, which are used for training. We show results on Pascal VOC and ImageNet, outperforming the previous state of the art on both datasets.
+-->
+		</p><p></p>
+                <p></p>
+              </td>
+            </tr>			   
+
+<!--Next paper should be listed in bottom -->
+	              <td width="20%"><img src="./img/dgm_2.png" alt="PontTuset" width="140" style="border-style: none">
+	              </td><td width="80%" valign="top">
+	                <p><a href="https://arxiv.org/abs/1904.03137">
+	<papertitle>Learning to Remember: A Synaptic Plasticity Driven Framework for Continual Learning</papertitle></a><br>Oleksiy Ostapenko, Mihai Puscas, Tassilo Klein, Patrick Jahnichen, <strong>M. Nabi</strong><br>
+                  <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2019 &nbsp; <br>
+                  <a href="https://arxiv.org/pdf/1904.03137.pdf">PDF</a> /
+		  <a href="https://github.com/SAP-samples/machine-learning-dgm">code</a> /
+		<a href="https://medium.com/sap-machine-learning-research/learning-to-remember-a-synaptic-plasticity-driven-framework-for-continual-learning-41b0d54d86af">blog</a>				
+                </p><p></p>
+<!--
+			   <p>In this paper we propose a self-paced learning protocol for weakly-supervised object detection. The main idea is to iteratively select a subset of samples that are most likely correct, which are used for training. We show results on Pascal VOC and ImageNet, outperforming the previous state of the art on both datasets.
+-->
+		</p><p></p>
+                <p></p>
+              </td>
+            </tr>
+			   
 
 <!--Next paper should be listed in bottom -->
 	              <td width="20%"><img src="./img/pami_new.png" alt="PontTuset" width="140" style="border-style: none">
@@ -170,7 +205,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 	<papertitle>Self-Paced Deep Learning for Weakly Supervised Object Detection</papertitle></a><br>E. Sangineto*, <strong>M. Nabi</strong>*, D. Culibrk and N. Sebe<br>
                   <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</em>, 2018 &nbsp; <br>
                   <a href="https://arxiv.org/pdf/1605.07651.pdf">PDF</a> /
-		  <a href="https://github.com/moinnabi/SelfPacedDeepLearning">code</a> /
+		  <a href="https://github.com/moinnabi/SelfPacedDeepLearning">code</a>
                 </p><p></p>
 <!--
 			   <p>In this paper we propose a self-paced learning protocol for weakly-supervised object detection. The main idea is to iteratively select a subset of samples that are most likely correct, which are used for training. We show results on Pascal VOC and ImageNet, outperforming the previous state of the art on both datasets.
@@ -188,6 +223,8 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                   <em>Workshop on Machine Learning on the Phone and Consumer Devices at NIPS</em>, 2017 &nbsp; <br>
                   <a href="https://arxiv.org/pdf/1712.07557.pdf">PDF</a> /
 		  <a href="https://paperswithcode.com/paper/differentially-private-federated-learning-a">code</a> /
+				<a href="https://miro.medium.com/max/2000/1*aq_Mx_XflA-bSZvAdfUEfA.jpeg">blog</a> /
+				<a href="https://miro.medium.com/max/2000/1*aq_Mx_XflA-bSZvAdfUEfA.jpeg">poster</a>
                 </p><p></p>
 <!--
 			   <p>In this paper we propose a self-paced learning protocol for weakly-supervised object detection. The main idea is to iteratively select a subset of samples that are most likely correct, which are used for training. We show results on Pascal VOC and ImageNet, outperforming the previous state of the art on both datasets.
@@ -227,7 +264,9 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                   <em>Association for Computational Linguistics (ACL)</em>, 2017 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
 		<a href="http://aclweb.org/anthology/P17-1024">PDF</a> /
 		<a href="https://foilunitn.github.io/content/aclPresentation-RaviShekhar.pdf">talk</a> /
-		  <a href="https://foilunitn.github.io/">code</a>
+		  <a href="https://foilunitn.github.io/">code</a> /
+		<a href="https://foilunitn.github.io/">data</a>	/
+		<a href="https://medium.com/sap-machine-learning-research/deep-vision-language-integration-242742fa4552">blog</a>
                 </p><p></p>
 <!--
 			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
